--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -141,7 +141,7 @@
 }
 
 .post-title {
-    color: $grey-color;
+    color: #070707;
     font-family: "Playfair Display";
     font-size: 42px;
     letter-spacing: -1px;
