--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -118,7 +118,7 @@
 }
 
 .post-meta {
-    color: $brand-color;
+    color: #ffffff ;
 }
 
 .post-link {
@@ -229,7 +229,7 @@
     }
 
     span {
-        color: $brand-color;
+        color: #ffffff ;
         display: block;
         font-family: Montserrat;
         font-size: 0.75rem;
