--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,7 +15,7 @@ dl, dd, ol, ul, figure {
  */
 body {
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
-    color: $text-color;
+    color: #ffffff ;
     background-color: #070707;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
@@ -107,7 +107,7 @@ article {
     }
 
     > div {
-        color: $grey-color;
+        color: #ffffff ;
         font-size: $base-font-size;
         font-style: italic;
 
